Google test corrected