@@ -11,7 +11,7 @@
     <packaging>jar</packaging>
 
     <properties>
-        <java.version>11</java.version>
+        <java.version>1.8</java.version>
         <code.version>UTF-8</code.version>
         <project.build.sourceEncoding>${code.version}</project.build.sourceEncoding>
         <project.reporting.outputEncoding>${code.version}</project.reporting.outputEncoding>
@@ -19,16 +19,17 @@
         <maven.compiler.target>${java.version}</maven.compiler.target>
 
         <testng.version>7.0.0</testng.version>
-        <selenide.version>5.18.0</selenide.version>
-        <restassured.version>4.3.2</restassured.version>
+        <selenide.version>5.20.0</selenide.version>
+        <restassured.version>4.3.3</restassured.version>
         <gson.version>2.8.6</gson.version>
         <apachecommonstext.version>1.9</apachecommonstext.version>
         <apachecommonsmath.version>3.6.1</apachecommonsmath.version>
         <apachecommoncollections.version>4.4</apachecommoncollections.version>
         <googleguava.version>30.0-jre</googleguava.version>
-        <assertj.version>3.18.1</assertj.version>
+        <assertj.version>3.19.0</assertj.version>
         <jfairy.version>0.5.9</jfairy.version>
-        <log4j.version>2.13.3</log4j.version>
+        <log4j.version>2.14.1</log4j.version>
+        <slf4j.version>1.7.30</slf4j.version>
         <failsafe.version>3.0.0-M5</failsafe.version>
     </properties>
 
@@ -86,9 +87,9 @@
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
-                <configuration>
-                    <release>11</release>
-                </configuration>
+                <!--<configuration>
+                    <release>1.8</release>
+                </configuration>-->
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -104,7 +105,7 @@
                 </executions>
                 <configuration>
                     <argLine>
-                        --illegal-access=permit
+                        <!--&#45;&#45;illegal-access=permit-->
                     </argLine>
                     <systemPropertyVariables>
                         <env>${env}</env>
@@ -190,16 +191,15 @@
             <version>${log4j.version}</version>
         </dependency>
 
-
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>1.7.5</version>
+            <version>${slf4j.version}</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
-            <version>1.6.4</version>
+            <version>${slf4j.version}</version>
         </dependency>
 
     </dependencies>
